Finished abilities, Rolls, Editting, Adding,removing, and changed UI

--- a/app/src/main/res/drawable/button_neon_bg.xml
+++ b/app/src/main/res/drawable/button_neon_bg.xml
@@ -10,6 +10,6 @@
         />
     <stroke
         android:width="2dp"
-        android:color="@color/blue_medium"
+        android:color="@color/neon"
         />
 </shape>
