--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="text_size_18">18sp</dimen>
     <dimen name="text_size_26">26sp</dimen>
     <dimen name="text_size_60">60sp</dimen>
+    <dimen name="text_size_40">40sp</dimen>
     <integer name="card_flip_time_full">300</integer>
     <integer name="card_flip_time_half">150</integer>
 </resources>
