--- a/app/src/main/res/layout/fragment_roll.xml
+++ b/app/src/main/res/layout/fragment_roll.xml
@@ -6,6 +6,7 @@
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:padding="20dp"
+    android:id="@+id/roll_layout"
     tools:context="com.y2thez.cyberpad.fragments.RollDialogFragment">
 
     <LinearLayout
@@ -26,9 +27,17 @@
             android:id="@+id/skill_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
             android:text="Intelligence"
             android:textColor="@color/green_blue" />
+
+        <Button
+            android:id="@+id/share_button"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/icon_share"
+            style="@style/LightBlueButton"
+             />
     </LinearLayout>
 
 
