--- a/app/src/main/res/layout/fragment_status.xml
+++ b/app/src/main/res/layout/fragment_status.xml
@@ -2,18 +2,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/black"
     tools:context="com.y2thez.cyberpad.fragments.StatusFragment">
 
-    <com.romainpiel.shimmer.ShimmerTextView
-        android:id="@+id/comingSoonLabel"
-        android:layout_centerInParent="true"
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        app:reflectionColor="@color/neon"
-        android:textSize="@dimen/text_size_26"
-        android:text="@string/under_construction" />
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/dateView"
+            android:gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/green"
+            />
+
+        <TextView
+            android:id="@+id/dateCountView"
+            android:gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/neon"
+            />
+    </LinearLayout>
+
 
 </RelativeLayout>
